--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     class="text-primary-600">Ascent.</span>
             </h1>
             <p class="text-xl md:text-2xl text-slate-600 mb-10 max-w-2xl mx-auto">
-                **ASCEND:** The All-in-One SME Center for Empowerment and Growth. We unite every tool, connection, and
+                ASCEND: The All-in-One SME Center for Empowerment and Growth. We unite every tool, connection, and
                 resource your business needs to formalize, scale, and thrive in one intelligent platform.
             </p>
             <div class="flex flex-col sm:flex-row justify-center gap-4">
@@ -89,7 +89,7 @@
             <h2 class="text-4xl font-extrabold mb-4 text-white">What Does It Mean to ASCEND?</h2>
             <p class="text-xl text-primary-300 mb-12 max-w-3xl mx-auto">
                 ASCEND is more than a name—it’s our promise and your pathway. It stands for our core mission as your
-                **A**ll-in-One **S**ME **C**onnection & **E**mpowerment **N**etwork for **D**evelopment.
+                All-in-One SME Connection & Empowerment Network for Development.
             </p>
 
             <!-- Acronym Grid -->
